--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
   "scripts": {
     "build": "babel index.js --out-file index.cjs.js",
     "prepublish": "npm run build",
+    "prebuild": "npm run test",
     "test": "jest",
-    "prebuild": "npm run test"
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.26.0",
-    "esm": "^3.2.22",
     "gulp-format-md": "^0.1.9",
-    "mocha": "^2.4.5",
     "jest": "^29.7.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
